mouse_automation.pyの確認

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,8 +1,7 @@
 [Appearance]
 window_width = 1000
 window_height = 600
+text_area_font_size = 12
 
 [Paths]
-downloads_path = C:\Users\yokam\Downloads
-backup_path = C:/Shinseikai/CSV2XL/backup
-processed_path = C:\Shinseikai\CSV2XL\processed
+operation_file_path = C:\Shinseikai\TXT2JSON\mouseoperation.txt
