--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,7 +1,12 @@
 [Appearance]
-window_width = 1000
-window_height = 600
-text_area_font_size = 12
+window_width = 1200
+window_height = 800
+editor_width = 600
+editor_height = 600
+text_area_font_size = 11
+text_area_font_name = Yu Gothic UI
+main_window_position = +10+10
+editor_window_position = +10+10
 
 [Paths]
 operation_file_path = C:\Shinseikai\TXT2JSON\mouseoperation.txt
