このコードで各ボタンの大きさを一括でまとめて、Configで設定

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -7,6 +7,8 @@ text_area_font_size = 12
 text_area_font_name = Yu Gothic UI
 main_window_position = +10+10
 editor_window_position = +10+10
+button_width = 12
+button_height = 2
 
 [Paths]
 operation_file_path = C:\Shinseikai\TXT2JSON\mouseoperation.txt
