このコードで各ボタンの大きさを一括でまとめて、Configで設定

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -4,7 +4,7 @@ window_height = 800
 editor_width = 800
 editor_height = 800
 text_area_font_size = 12
-text_area_font_name = Yu Gothic UI
+text_area_font_name = MS Gothic
 main_window_position = +10+10
 editor_window_position = +10+10
 button_width = 12
