--- a/utils/config.ini
+++ b/utils/config.ini
@@ -12,3 +12,4 @@ button_height = 2
 
 [Paths]
 operation_file_path = C:\Shinseikai\TXT2JSON\mouseoperation.txt
+soap_copy_file_path = C:\Shinseikai\TXT2JSON\soapcopy.txt
