--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 altgraph==0.17.4
-MouseInfo==0.1.3
+colorama==0.4.6
+exceptiongroup==1.3.0
+iniconfig==2.1.0
 packaging==25.0
 pefile==2023.2.7
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
+pluggy==1.6.0
 pyinstaller==6.13.0
-pyinstaller-hooks-contrib==2025.3
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-pytweening==1.2.0
+pyinstaller-hooks-contrib==2025.4
+pyperclip==1.8.2
+pytest==8.3.5
 pywin32-ctypes==0.2.3
-setuptools==80.1.0
-uv==0.6.17
+tomli==2.2.1
+typing_extensions==4.13.2
+uv==0.7.6
