--- a/utils/config.ini
+++ b/utils/config.ini
@@ -11,5 +11,5 @@ button_width = 12
 button_height = 2
 
 [Paths]
-operation_file_path = C:\Shinseikai\TXT2JSON32\mouseoperation.exe
-soap_copy_file_path = C:\Shinseikai\TXT2JSON32\soapcopy.exe
+operation_file_path = C:\Shinseikai\TXT2JSON\mouseoperation.exe
+soap_copy_file_path = C:\Shinseikai\TXT2JSON\soapcopy.exe
